[gd_scene load_steps=3 format=2]

[ext_resource path="res://Examples/Memory.gd" type="Script" id=1]
[ext_resource path="res://Game.tscn" type="PackedScene" id=2]

[node name="Memory" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="GridContainer" type="GridContainer" parent="." index="1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -100.0
columns = 13

[node name="FlipTimer" type="Timer" parent="." index="2"]
one_shot = true

[node name="MatchTimer" type="Timer" parent="." index="3"]
one_shot = true

[connection signal="timeout" from="FlipTimer" to="." method="_on_FlipTimer_timeout"]
[connection signal="timeout" from="MatchTimer" to="." method="_on_MatchTimer_timeout"]
